--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,7 @@ project.lock.json
 project.fragment.lock.json
 artifacts/
 
+
 # Tye
 .tye/
 
@@ -483,3 +484,10 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+# IDE files
+*.suo
+*.ipr
+.vs
+.idea
+.vscode
